Getting data and passing to pie chart

--- a/src/main/javascript/index.html
+++ b/src/main/javascript/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<base href="/">
-		<title>Application</title>
+		<title>Baltimore Data</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="main.css">
 
@@ -9,6 +9,8 @@
 		<script src="lib/zone.js/dist/zone.js"></script>
 		<script src="lib/reflect-metadata/Reflect.js"></script>
 		<script src="lib/systemjs/dist/system.src.js"></script>
+		<!--<script src="~/node_modules/chart.js/src/chart.js"></script>-->
+
 		<script>
 			System.config({
                 paths: {
@@ -41,6 +43,6 @@
 		</script>
 	</head>
 	<body>
-		<app></app>
+		<app>Loading...</app>
 	</body>
 </html>
